2003-05-20  Bradley Bell  <btb@icculus.org>

	* main/mission.c, main/newmenu.c: use PHYSFS to load missions,
	player files

	* include/ignorecase.h, misc/Makefile.am, misc/ignorecase.c: added
	ignorecase stuff

2003-05-17  Bradley Bell  <btb@icculus.org>

	* main/config.c: use physfs to read config file

	* include/physfsx.h: added gets and puts functions

	* include/cfile.h: correct seek return value

2003-05-16  Bradley Bell  <btb@icculus.org>

	* main/config.c, main/playsave.c: use physfs to write
	config/player files

	* include/physfsx.h: added my physfs extensions

	* main/inferno.c: physfs initialization stuff

	* main/polyobj.c: use cfilelength instead of file->size

	* configure.ac: add check for physfs lib

	* include/cfile.h: made cfile into a wrapper for physfs

	* main/mission.c, main/movie.c, main/newdemo.c, main/newmenu.c:
	disabled althogdir stuff (shouldn't be needed w/physfs)

	* Makefile.am, cfile/.cvsignore, cfile/Makefile.am, cfile/cfile.c,
	configure.ac: drop cfile stuff

0.2.4:

2003-05-12  Bradley Bell  <btb@icculus.org>

	* configure.ac: increment version number

	* main/bm.c: use con_printf for exit model warnings

	* configure.ac: must check for timespec after setting -mno-cygwin

	* main/inferno.c: added -nohogdir and -userdir options

	* NEWS, main/titles.c: use briefings with no extension

0.2.3:

2003-04-30  Bradley Bell  <btb@icculus.org>

	* configure.ac: have to include time.h when checking for nanosleep

	* configure.ac, libmve/mveplay.c: use autoconf to check for struct
	timespec

	* Makefile.am, NEWS, README, configure.ac: fix linking bug,
	increment version number

	* main/Makefile.am: make dist fix

0.2.2:

2003-04-29  Bradley Bell  <btb@icculus.org>

	* configure.ac, 2d/2dsline.c, main/automap.c, libmve/mveplay.c:
	fixes for OS X 10.2

2003-04-24  Bradley Bell  <btb@icculus.org>

	* configure.ac: increment version number

	* main/inferno.c: redeclare main() 'the SDL way', make sure SDL.h
	is always included.
